ca va encore je toruve

--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   "homepage": "https://github.com/stwiertz/NodeJS_CLI#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "isemail": "^3.2.0"
+    "chalk": "^2.4.2",
+    "email-validator": "^2.0.4",
+    "figlet": "^1.2.1",
+    "isemail": "^3.2.0",
+    "ora": "^3.0.0",
+    "prompt": "^1.0.0"
+  },
+  "bin": {
+    "fwned": "./index.js"
   }
 }
